# 2024-solar-eclipse-orange-monitor

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  404.html  CNAME  README.md  data.csv  index.html  index.txt  package.json  pnpm-lock.yaml  pre-deploy.sh  raw_data.json
.github/workflows/: deploy.yml  gcp_build_image_and_deploy.prod.yml
2024-solar-eclipse-orange-monitor/: 2024-solar-eclipse-orange-monitor.sln  package.json
2024-solar-eclipse-orange-monitor/2024-solar-eclipse-orange-monitor/: 2024-solar-eclipse-orange-monitor.csproj  FrmMain.Designer.cs  FrmMain.cs  Program.cs
2024-solar-eclipse-orange-monitor/2024-solar-eclipse-orange-monitor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
2024-solar-eclipse-orange-monitor/backend/: main.py  pyproject.toml
2024-solar-eclipse-orange-monitor/backend/src/: cloud_storage.py  firestore.py
2024-solar-eclipse-orange-monitor/collector/: collector.js  pnpm-lock.yaml
2024-solar-eclipse-orange-monitor/src/app/: layout.tsx  page.tsx
2024-solar-eclipse-orange-monitor/src/lib/: api.ts  apiError.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  data.json  database.js  express.js  pyproject.toml
collector/: .env.example  .gitignore  arduino.ino  collector.js  database.js  express.js  package.json  pnpm-lock.yaml
collector/backup/: template.db.sqlite
public/: data.json  raw_data.csv
src/app/: layout.tsx  page.tsx
src/constants/: data.ts
src/env/: server.mjs
src/lib/: api.ts  arduino-reader.ts  utils.ts
src/types/: backend.schema.ts  enum.ts
(+18 files in other folders)
