[tool.poetry]
name = "solar-eclipse-backend"
version = "0.1.0"
description = "This a backend API server that collects temperature and humidiy from local IoT data collector."
authors = ["An-Ting Hsu <andyhsu10@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
pydantic-settings = "^2.2.1"
google-cloud-firestore = "2.13.1"
google-cloud-storage = "^2.16.0"
gunicorn = "^21.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
